--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,18 @@ ul {
   margin: 0;
   padding-left: 0;
 }
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+button {
+  display: block;
+  margin: 0 auto;
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+}
 .container {
   width: 1200px;
   padding-left: 15px;
@@ -181,11 +193,7 @@ ul {
   color: var(--hero-white-color);
 }
 .hero-button {
-  display: block;
   padding: 10px 32px;
-  margin-left: auto;
-  margin-right: auto;
-  border-radius: 4px;
   border: 0px;
 
   font-family: inherit;
@@ -236,6 +244,9 @@ ul {
   line-height: 1.71;
 }
 /*-------------------- inform --------------------*/
+.inform {
+  padding-top: 0;
+}
 .inform-list {
   display: flex;
   column-gap: 30px;
@@ -276,10 +287,9 @@ ul {
   color: var(--text-link-color);
 }
 .personal-text {
-  padding-top: 10px;
   text-align: center;
   font-size: 16px;
-  line-height: 1.18px;
+  line-height: 1.18;
   margin-bottom: 16px;
 }
 .personal-title {
@@ -356,6 +366,7 @@ ul {
 .footer {
   display: flex;
   align-items: baseline;
+  padding: 60px 0;
 }
 .footer-logo {
   display: block;
@@ -382,10 +393,7 @@ ul {
 .btn-accent:focus {
   color: var(--accent-blue-color);
 }
-.footer-secsion {
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
+
 /* ---------------------------------- */
 .footer-soc {
   padding-left: 30px;
@@ -430,19 +438,21 @@ ul {
   fill: var(--footer-icon-color);
 }
 /*--------------------- portfolio --------------------*/
+.header-portfolio {
+  border-bottom: 1px solid #ececec;
+}
 .porfolio-list-button {
   display: flex;
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 34px;
+  margin-bottom: 50px;
+  gap: 8px;
 }
 /* .porfolio-list-button > .porfolio-item:not(:last-child) {
   margin-right: 8px;
 } */
-.porfolio-list-button {
-  gap: 8px;
-}
+
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
@@ -454,7 +464,6 @@ ul {
 
 .portfolio-card {
   padding: 20px 24px;
-  background: var(--card-back-portfolio-color);
   border: 1px solid #eeeeee;
   border-top: 0;
 }
@@ -462,6 +471,8 @@ ul {
   display: block;
 }
 .portfolio-title {
+  margin-bottom: 4px;
+
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
