--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,8 @@ button {
   color: var(--text-link-color);
 }
 .header {
+  display: flex;
+  align-items: center;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
@@ -174,6 +176,7 @@ button {
   background-position: center;
   background-size: cover;
   max-width: 1600px;
+  height: 600px;
   margin: 0 auto;
 
   padding-top: 200px;
@@ -307,21 +310,19 @@ button {
   width: 44px;
   height: 44px;
   border-radius: 50%;
+  color: var(--border-client-icon);
 }
 .personal-soc-icon {
-  fill: var(--icon-color-back);
+  fill: currentColor;
   width: 20px;
   height: 20px;
 }
 .personal-soc-link:hover,
 .personal-soc-link:focus {
   background-color: var(--accent-blue-color);
+  color: var(--btn-white-color);
 }
 
-.personal-soc-link:hover .personal-soc-icon,
-.personal-soc-link:focus .personal-soc-icon {
-  fill: var(--btn-white-color);
-}
 /*-----------------------client---------------------------- */
 .title-client {
   margin-bottom: 50px;
@@ -336,6 +337,7 @@ button {
   justify-content: center;
   align-items: center;
   border: 1px solid var(--border-client-icon);
+  color: var(--client-icon);
   border-radius: 4px;
   width: 170px;
   height: 92px;
@@ -343,29 +345,25 @@ button {
 .client-link:hover,
 .client-link:focus {
   border-color: var(--accent-blue-color);
+  color: var(--accent-blue-color);
 }
-.client-link:hover .client-icon,
-.client-link:focus .client-icon {
-  fill: var(--accent-blue-color);
-}
+
 .client-icon {
-  fill: var(--client-icon);
+  fill: currentColor;
   width: 106px;
   height: 60px;
 }
 
-/*-----------------------contacts-footer--------------------*/
-.footer-section {
-  background-color: var(--background-hero-color);
-  min-width: 1600px;
-  margin: 0 auto;
-}
-.footer-secsion {
-  width: 270px;
-}
-.footer {
+/*------------------ contacts-footer ------------*/
+.footer-container {
   display: flex;
   align-items: baseline;
+}
+.footer-secsion {
+  margin-right: 70px;
+}
+.footer {
+  background-color: var(--background-hero-color);
   padding: 60px 0;
 }
 .footer-logo {
@@ -395,10 +393,8 @@ button {
   color: var(--accent-blue-color);
 }
 
-/* ---------------------------------- */
-.footer-soc {
-  padding-left: 30px;
-}
+/* ----------------contacts-footer-soc------------------ */
+
 .list-footer-soc {
   display: flex;
   gap: 10px;
@@ -418,6 +414,7 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
+  color: var(--footer-icon-color);
 
   width: 44px;
   height: 44px;
@@ -436,7 +433,7 @@ button {
 .icon-footer-soc {
   width: 22px;
   height: 22px;
-  fill: var(--footer-icon-color);
+  fill: currentColor;
 }
 /*--------------------- portfolio --------------------*/
 .header-portfolio {
@@ -458,6 +455,14 @@ button {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
+}
+.portfolio-link {
+  display: block;
+}
+.portfolio-link:hover,
+.portfolio-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .portfolio-item-after {
   width: calc((100% - 60px) / 3);
@@ -498,11 +503,15 @@ button {
 }
 
 .portfolio-button:hover,
-.portfolio-button:hover {
+.portfolio-button:focus {
   background-color: var(--btn-back-color);
   color: var(--btn-white-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .portfolio-current {
   background-color: var(--accent-blue-color);
   color: var(--btn-white-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
